--- a/server/package.json
+++ b/server/package.json
@@ -8,11 +8,12 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "graphql-yoga": "^1.7.0",
+    "graphql-yoga": "^1.18.0",
     "jsonwebtoken": "^8.2.0",
+    "lodash": "^4.17.14",
     "prisma-client-lib": "^1.31.0"
   },
   "devDependencies": {
-    "prisma": "^1.31.0"
+    "prisma": "^1.34.1"
   }
 }
